# icey-cli

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md  SKILL.md  config.json  config.rtsp.example.json  flake.nix
.github/workflows/: ci.yml  publish-package-managers.yml  release.yml
docker/: Dockerfile  README.md  compose.yaml  entrypoint.sh
docs/: facetime-on-macbook.md  mediamtx.yml
packaging/: README.md  config.example.json  config.rtsp.example.json
packaging/templates/apt/: icey-server.list.in
packaging/templates/aur/: PKGBUILD.in
packaging/templates/chocolatey/: icey-server.nuspec.in
packaging/templates/chocolatey/tools/: chocolateyinstall.ps1.in  chocolateyuninstall.ps1.in
packaging/templates/debian/: control.in
packaging/templates/homebrew/: icey-server.rb.in
packaging/templates/nix/: default.nix.in
packaging/templates/scoop/: icey-server.json.in
packaging/templates/winget/: 0state.IceyServer.installer.yaml.in  0state.IceyServer.locale.en-US.yaml.in  0state.IceyServer.yaml.in
scripts/: build-apt-repo.sh  build-deb.sh  build-source-archives.sh  facetime-demo.sh  package-manager-check.sh  package-release.sh  publish-apt-repo.sh  publish-apt-site.sh  publish-aur.sh  publish-homebrew.sh  release-check.sh  release-context.sh  release-manifest.sh  render-package-managers.sh  validate-release-metadata.sh
src/server/: CMakeLists.txt  media-server.cpp
src/server/internal/: app.cpp  app.h  config.cpp  config.h  httpfactory.cpp  httpfactory.h  media.cpp  media.h  runtimeinfo.h  turnserver.cpp  turnserver.h  visionartifacts.cpp  visionartifacts.h
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: app.js  style.css
web/tests/: browser-smoke.mjs
